@@ -32,6 +32,9 @@ tickit_pen_lookup_attr.3 = tickit_pen_attrname.3
 tickit_pen_equiv.3 = tickit_pen_equiv_attr.3
 tickit_pen_clear_attr.3 = tickit_pen_clear.3
 
+tickit_utf8_byte2col.3 = tickit_utf8_mbswidth.3
+tickit_utf8_col2byte.3 = tickit_utf8_mbswidth.3
+
 tickit_string_countmore.3 = tickit_string_count.3
 tickit_string_ncount.3 = tickit_string_count.3
 tickit_string_ncountmore.3 = tickit_string_count.3
