@@ -3,5 +3,8 @@
   * Added entire toplevel Tickit instance
   * New bind_events API style - one event + flags, instead of bitmask
   * Renamed:
-     + tickit_string_seqlen  => tickit_utf8_seqlen
-     + tickit_string_putchar => tickit_utf8_put
+     + tickit_string_seqlen   => tickit_utf8_seqlen
+     + tickit_string_putchar  => tickit_utf8_put
+     + tickit_string_mbswidth => tickit_utf8_mbswidth
+     + tickit_string_byte2col => tickit_utf8_byte2col
+     + tickit_string_col2byte => tickit_utf8_col2byte
